fix spacing

--- a/blocks/form/components/formwelcome/formwelcome.scss
+++ b/blocks/form/components/formwelcome/formwelcome.scss
@@ -33,7 +33,7 @@
         max-width: 513px;
       }
 
-      h2 {
+      h1 {
         @include heading-level-3;
         margin-bottom: 32px;
 
